
  [ Gábor Pápai ]
  * mugCommander: new: add start menu entry for mugCommander by the installer
  * mugCommander: new: make file search cancellable
  * mugCommander: new: add "Find File" to menu (file)
  * mugCommander: fix: editor/viewer windows sometimes displays empty (until a resize event) and also remember editor/viewer window's positions and open in that size on next displaying
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Mon, 15 Mar 2010 11:12:30 +0100

pagavcs (1.4.1) karmic; urgency=low

  [ Gábor Pápai ]
  * fix: mugCommander: make quick keys more similar to total commander: ctrl+r=refresh; alt+f5=pack; alt+f9=unpack; f9=run; ctrl+h=show/hide hidden files
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Thu, 11 Mar 2010 21:23:12 +0100

pagavcs (1.4.0) karmic; urgency=low

  [ Gábor Pápai ]
  * new: mugCommander (fork of muCommander, muCommander with PagaVCS support built-in)
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Thu, 11 Mar 2010 20:38:12 +0100

pagavcs (1.3.43) karmic; urgency=low

  [ Gábor Pápai ]
  * new: #44 [commit-gui] select/deselect with pressing space
  * fix: #43 [merge] entering number starting with # causes exception
  * fix: #40: [cli] better CLI interface
  * fix: PagaVCS sometimes cannot restart properly
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Thu, 11 Mar 2010 19:10:15 +0100

pagavcs (1.3.42) karmic; urgency=low

  [ Gábor Pápai ]
  * new: muCommander integration (it needs modded muCommander (=mugCommander))
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Mon, 08 Mar 2010 22:31:27 +0100

pagavcs (1.3.41) karmic; urgency=low

  [ Gábor Pápai ]
  * new: [commit] show filename currently under commit
  * new: [update] show currently used bandwidth and total bandwidth
  
 -- Gábor Pápai <gabor.papai@gmail.com>  Thu, 04 Mar 2010 00:31:27 +0100

pagavcs (1.3.40) karmic; urgency=medium

  [ Gábor Pápai ]
  * fix: Issue 36: [log-gui] the show changes compares that revision to wrong revision
  